- Generalized cards to be used in different contexts - Refactored article cards to use the generic cards - Added navigation to other pages - Created a category selection page that uses the generalized cards and lets you navigate to category specific filtered pages - Created a category specific page that only shows the selected category - Scrollbar hidden to ensure there are no shifts in content position - Refactored main and app to make stuff work with the navigation and the hidden scrollbar

--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -1,5 +1,20 @@
 ﻿@import "tailwindcss";
 
+html {
+    overflow-y: scroll;
+}
+
+/* Chrome/Safari */
+html::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* opzionale */
+}
+
+/* Firefox */
+html {
+    scrollbar-width: none; /* nasconde in Firefox */
+}
+
 @theme {
     /* Grigi chiari */
     --color-gray-50: oklch(0.98 0 0);
